--- a/index.html
+++ b/index.html
@@ -148,32 +148,48 @@
                     <div class="w-24 h-1 bg-gradient-to-r from-indigo-600 to-cyan-500 rounded-full"></div>
                 </div>
                 <p class="mt-6 text-lg text-gray-600 max-w-2xl mx-auto reveal">Real-world results we've delivered for our clients.</p>
-                <div class="mt-16 grid gap-12 md:grid-cols-1 lg:grid-cols-2">
+                
+                <div class="mt-16 space-y-24">
                     <!-- Case Study 1: Rationkart -->
-                    <div class="bg-white rounded-xl shadow-lg overflow-hidden reveal text-left">
-                        <img src="https://placehold.co/600x400/4ade80/ffffff?text=Rationkart+System" alt="Rationkart Grocery Request System" class="w-full h-56 object-cover">
-                        <div class="p-8">
-                            <h3 class="text-2xl font-bold text-gray-800">Rationkart – Grocery Request & Approval System</h3>
-                            <p class="mt-4 text-gray-600">Developed a modern, Blinkit-style grocery request and approval system using Google Apps Script, HTML/CSS/JS, and Google Sheets backend for a mid-sized organization.</p>
-                            <h4 class="mt-6 font-semibold text-gray-700">Key Results:</h4>
-                            <ul class="mt-2 space-y-2 text-gray-600">
-                                <li class="flex items-start"><svg class="w-5 h-5 text-green-500 mr-2 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg><span><b>40% reduction</b> in manual approval workload.</span></li>
-                                <li class="flex items-start"><svg class="w-5 h-5 text-green-500 mr-2 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg><span><b>90%+ accuracy</b> in request tracking and history.</span></li>
-                                <li class="flex items-start"><svg class="w-5 h-5 text-green-500 mr-2 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg><span>Real-time notifications and an interactive dashboard.</span></li>
+                    <div class="grid lg:grid-cols-2 gap-12 items-center reveal">
+                        <div class="text-left">
+                             <h3 class="text-3xl font-bold text-gray-800">Rationkart – Grocery Request System</h3>
+                             <div class="flex flex-wrap gap-2 mt-4">
+                                <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">Google Apps Script</span>
+                                <span class="bg-cyan-100 text-cyan-800 text-sm font-medium px-3 py-1 rounded-full">Google Sheets</span>
+                                 <span class="bg-gray-100 text-gray-800 text-sm font-medium px-3 py-1 rounded-full">HTML/CSS/JS</span>
+                            </div>
+                            <p class="mt-4 text-gray-600">Developed a modern, Blinkit-style grocery request and approval system using Google Apps Script and a Google Sheets backend for a mid-sized organization.</p>
+                            <h4 class="mt-6 font-semibold text-gray-700 text-lg">Key Results:</h4>
+                            <ul class="mt-4 space-y-3 text-gray-600">
+                                <li class="flex items-start"><svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg><span><b>40% reduction</b> in manual approval workload through auto-approval logic.</span></li>
+                                <li class="flex items-start"><svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg><span><b>90%+ accuracy</b> in request tracking and approval history.</span></li>
+                                <li class="flex items-start"><svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg><span>Real-time notifications and an interactive, mobile-friendly dashboard.</span></li>
                             </ul>
                         </div>
+                         <div class="overflow-hidden rounded-lg shadow-2xl group">
+                            <img src="https://placehold.co/600x450/10b981/ffffff?text=Rationkart+UI" alt="Rationkart Grocery Request System" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                        </div>
                     </div>
+
                     <!-- Case Study 2: StockTracker Pro -->
-                    <div class="bg-white rounded-xl shadow-lg overflow-hidden reveal text-left">
-                        <img src="https://placehold.co/600x400/60a5fa/ffffff?text=StockTracker+Pro" alt="StockTracker Pro System" class="w-full h-56 object-cover">
-                        <div class="p-8">
-                            <h3 class="text-2xl font-bold text-gray-800">StockTracker Pro – Physical Stock Management System</h3>
-                            <p class="mt-4 text-gray-600">Designed and implemented a web-based stock management system using Google Apps Script, HTML/CSS/JS, and Google Sheets to streamline physical stock entry and tracking.</p>
-                             <h4 class="mt-6 font-semibold text-gray-700">Key Results:</h4>
-                            <ul class="mt-2 space-y-2 text-gray-600">
-                                <li class="flex items-start"><svg class="w-5 h-5 text-green-500 mr-2 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg><span><b>35% faster</b> stock reconciliation via automation.</span></li>
-                                <li class="flex items-start"><svg class="w-5 h-5 text-green-500 mr-2 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg><span><b>95%+ accuracy</b> in physical vs. system stock validation.</span></li>
-                                <li class="flex items-start"><svg class="w-5 h-5 text-green-500 mr-2 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg><span>Centralized, real-time monitoring and secure role-based access.</span></li>
+                    <div class="grid lg:grid-cols-2 gap-12 items-center reveal">
+                        <div class="overflow-hidden rounded-lg shadow-2xl group lg:order-last">
+                             <img src="https://placehold.co/600x450/3b82f6/ffffff?text=StockTracker+Pro+UI" alt="StockTracker Pro System" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                        </div>
+                        <div class="text-left">
+                            <h3 class="text-3xl font-bold text-gray-800">StockTracker Pro – Stock Management</h3>
+                            <div class="flex flex-wrap gap-2 mt-4">
+                                <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">Google Apps Script</span>
+                                <span class="bg-cyan-100 text-cyan-800 text-sm font-medium px-3 py-1 rounded-full">Google Sheets</span>
+                                 <span class="bg-gray-100 text-gray-800 text-sm font-medium px-3 py-1 rounded-full">HTML/CSS/JS</span>
+                            </div>
+                            <p class="mt-4 text-gray-600">Designed and implemented a web-based system to streamline physical stock entry, tracking, and reconciliation, eliminating manual errors.</p>
+                            <h4 class="mt-6 font-semibold text-gray-700 text-lg">Key Results:</h4>
+                            <ul class="mt-4 space-y-3 text-gray-600">
+                                <li class="flex items-start"><svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg><span><b>35% faster</b> stock reconciliation by automating manual entry processes.</span></li>
+                                <li class="flex items-start"><svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg><span><b>95%+ accuracy</b> in physical vs. system stock validation.</span></li>
+                                <li class="flex items-start"><svg class="w-6 h-6 text-green-500 mr-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg><span>Centralized, real-time stock monitoring with secure, role-based access.</span></li>
                             </ul>
                         </div>
                     </div>
@@ -208,7 +224,7 @@
                             <li class="flex items-center"><svg class="w-6 h-6 text-green-500 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>1-2 hours training session</li>
                             <li class="flex items-center"><svg class="w-6 h-6 text-green-500 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>15 days free bug-fix support</li>
                         </ul>
-                        <a href="#contact" class="mt-8 block w-full text-center bg-gray-200 text-gray-800 font-bold py-3 px-6 rounded-lg hover:bg-gray-300 transition duration-300">Get Started</a>
+                        <a href="https://wa.me/918851666208?text=Hello%20FlowForge,%20I'm%20interested%20in%20the%20Starter%20plan.%20Can%20we%20discuss%20how%20to%20get%20started?" target="_blank" class="mt-8 block w-full text-center bg-gray-200 text-gray-800 font-bold py-3 px-6 rounded-lg hover:bg-gray-300 transition duration-300">Get Started</a>
                     </div>
                     <!-- Pricing Card 2: Growth (Most Popular) -->
                     <div class="bg-white rounded-xl shadow-2xl p-8 flex flex-col relative transform lg:scale-105 border-2 border-indigo-600 reveal">
@@ -228,7 +244,7 @@
                            <li class="flex items-center"><svg class="w-6 h-6 text-green-500 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Email alerts and notifications</li>
                            <li class="flex items-center"><svg class="w-6 h-6 text-green-500 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>30 days free bug-fix support</li>
                         </ul>
-                        <a href="#contact" class="mt-8 block w-full text-center bg-gradient-to-r from-indigo-600 to-cyan-500 text-white font-bold py-3 px-6 rounded-lg hover:from-indigo-700 hover:to-cyan-600 transition duration-300">Get Started</a>
+                        <a href="https://wa.me/918851666208?text=Hello%20FlowForge,%20I'm%20interested%20in%20the%20Growth%20plan.%20It%20looks%20like%20a%20great%20fit%20for%20my%20business.%20Let us connect." target="_blank" class="mt-8 block w-full text-center bg-gradient-to-r from-indigo-600 to-cyan-500 text-white font-bold py-3 px-6 rounded-lg hover:from-indigo-700 hover:to-cyan-600 transition duration-300">Get Started</a>
                     </div>
                     <!-- Pricing Card 3: Premium -->
                     <div class="bg-white rounded-xl shadow-lg p-8 flex flex-col reveal relative">
@@ -247,7 +263,7 @@
                             <li class="flex items-center"><svg class="w-6 h-6 text-green-500 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>API integrations with 3rd-party systems</li>
                             <li class="flex items-center"><svg class="w-6 h-6 text-green-500 mr-2 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>Ongoing support & maintenance</li>
                         </ul>
-                        <a href="#contact" class="mt-8 block w-full text-center bg-gray-200 text-gray-800 font-bold py-3 px-6 rounded-lg hover:bg-gray-300 transition duration-300">Get Started</a>
+                        <a href="https://wa.me/918851666208?text=Hello%20FlowForge,%20I'd%20like%20to%20inquire%20about%20the%20Premium%20plan%20for%20enterprise-level%20automation.%20Please%20let%20me%20know%20the%20next%20steps." target="_blank" class="mt-8 block w-full text-center bg-gray-200 text-gray-800 font-bold py-3 px-6 rounded-lg hover:bg-gray-300 transition duration-300">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -503,7 +519,7 @@
                        <!-- WhatsApp Card -->
                        <a href="https://wa.me/918851666208" target="_blank" class="group bg-white p-8 rounded-xl shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 flex flex-col items-center text-center">
                             <div class="bg-green-100 p-4 rounded-full">
-                               <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-green-600"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
+                               <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-green-600"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81 .7A2 2 0 0 1 22 16.92z"/></svg>
                             </div>
                            <h3 class="mt-4 text-2xl font-bold text-gray-800">Chat on WhatsApp</h3>
                            <p class="mt-2 text-gray-600">+91-8851666208</p>
@@ -603,6 +619,5 @@
     </script>
 </body>
 </html>
-
 
 
