--- a/index.html
+++ b/index.html
@@ -168,14 +168,14 @@
                             </ul>
                         </div>
                          <div class="overflow-hidden rounded-lg shadow-2xl group">
-                            <img src="https://placehold.co/600x450/10b981/ffffff?text=Rationkart+UI" alt="Rationkart Grocery Request System" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                            <img src="https://media.licdn.com/dms/image/v2/D5622AQHcFC7V1FYK0g/feedshare-shrink_2048_1536/B56ZlTCfdWJoAw-/0/1758034786916?e=1761177600&v=beta&t=tmvJSADw8wuul_0go2L1cjVErf3JkTM3kHdNII8GxFw" alt="Rationkart Grocery Request System" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
                         </div>
                     </div>
 
                     <!-- Case Study 2: StockTracker Pro -->
                     <div class="grid lg:grid-cols-2 gap-12 items-center reveal">
                         <div class="overflow-hidden rounded-lg shadow-2xl group lg:order-last">
-                             <img src="https://placehold.co/600x450/3b82f6/ffffff?text=StockTracker+Pro+UI" alt="StockTracker Pro System" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
+                             <img src="https://media.licdn.com/dms/image/v2/D5622AQFOnE4zVwcxkw/feedshare-shrink_1280/B56ZlTCfeLI0Aw-/0/1758034787343?e=1761177600&v=beta&t=c2HuOKrUmONH5KnSibzo8Ulqlj8UiUB496Y2jChCBlg" alt="StockTracker Pro System" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
                         </div>
                         <div class="text-left">
                             <h3 class="text-3xl font-bold text-gray-800">StockTracker Pro – Stock Management</h3>
