--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 </div>
                 <div class="mt-16 flex flex-col md:flex-row items-center gap-12">
                     <div class="md:w-1/3 text-center reveal">
-                        <img src="https://placehold.co/400x400/e0e7ff/3730a3?text=Suraj+S" alt="Suraj Singh - Full-Stack Developer" class="rounded-full w-64 h-64 mx-auto shadow-2xl object-cover">
+                        <img src="https://media.licdn.com/dms/image/v2/D5603AQGqylMyDVgf4g/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1708867516873?e=1761177600&v=beta&t=Hk8ZAO346BnL_6RXQ3r4m-QyWqKVWA-IFtzQEtNWdgI" alt="Suraj Singh - Full-Stack Developer" class="rounded-full w-64 h-64 mx-auto shadow-2xl object-cover">
                         <h3 class="mt-6 text-2xl font-bold text-gray-800">Suraj Singh</h3>
                         <p class="text-indigo-600 font-semibold">Full-Stack Developer</p>
                         <p class="text-gray-500 font-medium">Noida, India</p>
